gen/oauth/v1/cargo-errors.log
    Checking google-oauth1 v0.1.0 (/Users/sthiel/dev/google-apis/generated/gen/oauth/v1/lib)
error[E0412]: cannot find type `TokeninfoRequestBuilder` in this scope
   --> oauth/v1/lib/src/lib.rs:190:32
    |
190 |     pub fn tokeninfo(&self) -> TokeninfoRequestBuilder<A> {
    |                                ^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope
help: possible candidate is found in another module, you can import it into scope
    |
1   | use crate::resources::TokeninfoRequestBuilder;
    |

error[E0422]: cannot find struct, variant or union type `TokeninfoRequestBuilder` in this scope
   --> oauth/v1/lib/src/lib.rs:191:9
    |
191 |         TokeninfoRequestBuilder {
    |         ^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope
help: possible candidate is found in another module, you can import it into scope
    |
1   | use crate::resources::TokeninfoRequestBuilder;
    |

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0412, E0422.
For more information about an error, try `rustc --explain E0412`.
error: Could not compile `google-oauth1`.

To learn more, run the command again with --verbose.
